--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <script>
     // plugin startup shim
     var _pluginModule = require('pluginmain');
-    
+
     // Global reference to the current sheet;
     var _plugin = null;
 
@@ -27,18 +27,18 @@
     }
 
     // This is a well-known entry point. It's called by the hosting infrastructure.
-    function PluginMain(sheetRef, opts) {                
+    function PluginMain(sheetRef, opts) {
 
         _pluginModule.MyPlugin.BrowserEntryAsync(sheetRef, opts).then(
-            function(plugin) {
+            function (plugin) {
                 // Success 
-                _plugin = plugin;            
-                $("#_loadingmsg").hide();  
+                _plugin = plugin;
+                $("#_loadingmsg").hide();
                 $("#_mainbody").show(); // activate main controls
             }
-        ).catch(function(error) {
+        ).catch(function (error) {
             // Error case. Display message and Keep main body hiden. 
-            $("#_loadingmsg").hide();  
+            $("#_loadingmsg").hide();
             showError(error);
         });
     }
@@ -46,10 +46,12 @@
 <script src="https://trcanvasdata.blob.core.windows.net/code2/plugin.js"></script>
 
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <title>Basic TRC plugin</title>
 </head>
+
 <body>
     <div id="_loadingmsg">
         <img src="https://trcanvasdata.blob.core.windows.net/code2/loading.gif">
@@ -59,32 +61,34 @@
     <span id="_errorbtn" style="display:none">
         <button onclick="clearError()">Clear error</button>
     </span>
-    <div id="_mainbody"  style="display:none">
-        <p>
-            This is an empty TRC plugin that demonstrates calling PluginMain().
-        </p>
-        <p>
-            See <a href="https://github.com/Voter-Science/TrcLibNpm">https://github.com/Voter-Science/TrcLibNpm</a> for more information on writing plugions.
-        </p>
-
-        <h2>Basic sheet information:</h2>
+    <div id="_mainbody" style="display:none">
+        <h2>Download for mail list</h2>
         <table>
-            <tr><td>Name:</td><td><div id="SheetName"></div></td></tr>
-            <tr><td>Parent:</td><td><div id="ParentSheetName"></div></td></tr>
-            <tr><td>Version:</td><td><div id="SheetVer"></div></td></tr>
-            <tr><td>Total Rows:</td><td><div id="RowCount"></div></td></tr>
-            <tr><td>Last refreshed:</td><td><div id="LastRefreshed"></div></td></tr>
-        </table> 
-        <div id="locInfo">
-        </div>
+            <tr>
+                <td>Name:</td>
+                <td>
+                    <div id="SheetName"></div>
+                </td>
+            </tr>
+            <tr>
+                <td>Total Rows:</td>
+                <td>
+                    <div id="RowCount"></div>
+                </td>
+            </tr>
+            <tr>
+                <td>Total Households:</td>
+                <td>
+                    <div id="HouseholdCount"></div>
+                </td>
+            </tr>
+        </table>
 
-        <button onclick="_plugin.onClickRefresh()">Refresh!</button>
-
-        <button onclick="_plugin.onGetSheetContents()">GetSheetContents!</button>
         <div id="contents">
-
-        <p>Congratulations! You made your first TRC plugin!</p>
+            <p>Here is a downloadable CSV for households in this sheet:</p>
+            <div id="download"></div>
         </div>
     </div>
 </body>
+
 </html>
